# BenevolentGPT

./: README.md  peps.py  pyproject.toml
downloaded_peps/: pep-0000.txt  pep-0001.txt  pep-0002.txt  pep-0003.txt  pep-0004.txt  pep-0005.txt  pep-0006.txt  pep-0007.txt  pep-0008.txt  pep-0009.txt  pep-0010.txt  pep-0011.txt  pep-0012.txt  pep-0013.txt  pep-0020.txt  pep-0042.txt  pep-0100.txt  pep-0101.txt  pep-0102.txt  pep-0103.txt  pep-0160.txt  pep-0200.txt  pep-0201.txt  pep-0202.txt  pep-0203.txt  pep-0204.txt  pep-0205.txt  pep-0206.txt  pep-0207.txt  pep-0208.txt  pep-0209.txt  pep-0210.txt  pep-0211.txt  pep-0212.txt  pep-0213.txt  pep-0214.txt  pep-0215.txt  pep-0216.txt  pep-0217.txt  pep-0218.txt  (+610 more)
