[project]
name = "benevolentgpt"
authors = [{ name = "bswck", email = "bartoszpiotrslawecki@gmail.com" }]
dependencies = [
    "aiohttp>=3.10.0",
    "beautifulsoup4>=4.12.3",
]
readme = "README.md"
requires-python = ">= 3.8"
dynamic = ["version"]

[tool.rye]
virtual = true
managed = true
dev-dependencies = []
